--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -14,6 +14,8 @@
     <!-- Our CSS -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
+    <!-- d3 JavaScript -->
+<script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
     <!-- The div that holds our map -->
@@ -26,8 +28,9 @@
 
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
+    <script type="text/javascript" src="static/js/cities.js"></script>
     <!-- Our JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>
-
+    
 </body>
 </html>
